2009-03-10  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (+hildon_app_menu_delete_event_handler)
	(hildon_app_menu_class_init): Hide the menu if it receives a
	delete-event, but don't destroy it

	Fixes: NB#104485 (Not able to address the call when application
	menu is opened at background)

2009-03-10  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c
	(hildon_app_menu_apply_style, hildon_app_menu_class_init):
	Remove the "external-border" style property, let the menu take its
	natural size (or the one set by the window manager)
	(hildon_app_menu_repack_items):
	Don't reshow the menu, avoid flickers.

	Partially fixes NB#94957 (Smoothly opened application menu)

2009-03-10  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.50]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-03-10  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_motion_notify_cb): We control that the
	direction error margin is used just in case the movement is
	allowed in the other direction.

	Fixes: NB#105012 (buttons inside a pannable area not getting
	release event when dragging/releasing)

2009-03-10  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init),
	(hildon_pannable_area_get_property),
	(hildon_pannable_area_set_property),
	(hildon_pannable_area_initial_effect),
	(hildon_pannable_axis_scroll),
	(hildon_pannable_area_button_release_cb): Reviewed the
	overshooting effect, now it has its own max
	speed (PROP_VEL_MAX_OVERSHOOTING). Modified the calculation of the
	speed when bouncing.

2009-03-09  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.48]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-03-09  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Changed the max speed, now